--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,4 +12,77 @@
   {{{ body }}}
 </body>
 
+<script>
+  document.addEventListener('DOMContentLoaded', (event) => {
+    document.querySelectorAll('input[type="checkbox"]').forEach(checkbox => {
+      checkbox.addEventListener('change', event => {
+        const checkboxState = {
+          id: event.target.id,
+          checked: event.target.checked
+        };
+
+        fetch('/checkbox', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(checkboxState)
+        })
+          .then(response => {
+            console.log(response); 
+            return response.json();
+          })
+          .then(data => {
+            console.log(data);
+            updateTableRow(event.target.id, event.target.checked);
+          })
+          .catch(error => console.error('錯誤：', error));
+      });
+    });
+  });
+  
+  function updateTableRow(id, isChecked) {
+    const tr = document.getElementById(id).closest('tr');
+    const tbodyTr = document.querySelectorAll('tbody tr');
+
+    if (tr.closest('thead')) {
+      tbodyTr.forEach(row => {
+        if (!row.closest('thead')) {
+          if (isChecked) {
+            row.classList.add('table-orange');
+            row.classList.remove('table-gray', 'table-white');
+          } else {
+            row.classList.remove('table-orange');
+            const index = parseInt(row.querySelector('.table-id').textContent) - 1;
+            const isOdd = index % 2 === 0;
+            if (isOdd) {
+              row.classList.add('table-gray');
+              row.classList.remove('table-white');
+            } else {
+              row.classList.add('table-white');
+              row.classList.remove('table-gray');
+            }
+          }
+        }
+      });
+    } else if (tr.closest('tbody')) {
+      if (isChecked) {
+        tr.classList.add('table-orange');
+        tr.classList.remove('table-gray', 'table-white');
+      } else {
+        const index = parseInt(tr.querySelector('.table-id').textContent) - 1;
+        const isOdd = index % 2 === 0;
+        if (isOdd) {
+          tr.classList.remove('table-white');
+          tr.classList.add('table-gray');
+        } else {
+          tr.classList.remove('table-gray');
+          tr.classList.add('table-white');
+        }
+        tr.classList.remove('table-orange');
+      }
+    }
+  }
+</script>
+
 </html>
