add side nav background color switch

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,16 +2,16 @@
 
 {{!-- navigator --}}
 <nav>
-<div class="nav">
+<div class="nav" id="nav">
 <a href="/"><img src="https://raw.githubusercontent.com/ALPHACamp/WFE-data-table/0f97f3113bff18353154b8644eb0b31fff2a3bef/icons/logo.svg" width="100" height="100" class="nav-logo" alt="nav-logo"></a>
 <img src="https://raw.githubusercontent.com/ALPHACamp/WFE-data-table/0f97f3113bff18353154b8644eb0b31fff2a3bef/icons/frame.svg"
-  width="100" height="100" class="navicon nav-frame checked" alt="nav-frame">
+  width="100" height="100" class="navicon nav-frame" id="nav-frame" alt="nav-frame">
 <img src="https://raw.githubusercontent.com/ALPHACamp/WFE-data-table/0f97f3113bff18353154b8644eb0b31fff2a3bef/icons/folder.svg"
-  width="100" height="100" class="navicon nav-folder" alt="nav-folder">
+  width="100" height="100" class="navicon nav-folder" id="nav-folder" alt="nav-folder">
 <img src="https://raw.githubusercontent.com/ALPHACamp/WFE-data-table/0f97f3113bff18353154b8644eb0b31fff2a3bef/icons/mail.svg"
-  width="100" height="100" class="navicon nav-mail" alt="nav-mail">
+  width="100" height="100" class="navicon nav-mail" id="nav-mail" alt="nav-mail">
 <img src="https://raw.githubusercontent.com/ALPHACamp/WFE-data-table/0f97f3113bff18353154b8644eb0b31fff2a3bef/icons/darkmode-on.svg"
-  width="100" height="100" class="navicon nav-darkmodeon" alt="nav-darkmodeon">
+  width="100" height="100" class="navicon nav-darkmodeon" id="nav-darkmodeon" alt="nav-darkmodeon">
 </div>
 </nav>
 
